--- a/sppp/login.html
+++ b/sppp/login.html
@@ -4,8 +4,8 @@
 	</head>
 	<body>
 		<form action="/login" method="post">
-			Username:<input type="text" name="username">
-			Password:<input type="password" name="password">
+			Username:<input type="text" name="username" maxlength="16">
+			Password:<input type="password" name="password" maxlength="20">
 			<input type="submit" value="Login">
 		</form>
 		 <a href="/register">No account? Register here.</a> 
